--- a/chassis-bind9.yml
+++ b/chassis-bind9.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   bind9:
     build: ./bind9
-    image: registry.csec.dibris.unige.it:5000/fdt-bind9
+    image: gabibbo97/lidite-bind9
     hostname: ns
     volumes:
       - ./config/bind9/db.campus-savona.dt:/etc/bind/db.campus-savona.dt:ro
