--- a/chassis-ditto-full.yml
+++ b/chassis-ditto-full.yml
@@ -6,7 +6,7 @@ services:
       context: ./ditto-nginx
       args:
         NGINX_VERSION: 1.19.10
-    image: registry.csec.dibris.unige.it:5000/fdt-ditto-nginx
+    image: gabibbo97/lidite-ditto-nginx
     depends_on: ["gateway"]
     networks:
       a25_ind_enterprise:
