--- a/savona-operator.yml
+++ b/savona-operator.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   operator:
-    image: registry.csec.dibris.unige.it:5000/fdt-operator
+    image: gabibbo97/lidite-operator
     build: ./kvm-docker
     volumes:
       - ./config/windows/win.qcow2:/image/image
