--- a/dovesnap/dovesnap.yml
+++ b/dovesnap/dovesnap.yml
@@ -4,7 +4,7 @@ services:
     restart: always
     build:
       context: ./
-    image: iqtlabs/dovesnap:latest
+    image: gabibbo97/lidite-dovesnap:latest
     volumes:
       - /run/docker/plugins:/run/docker/plugins
       - /var/run/docker.sock:/var/run/docker.sock
